--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-nav></app-nav>
+<app-nav *ngIf="hideNavigation"></app-nav>
 <router-outlet (activate)="onActivate($event)"></router-outlet>
-<app-footer></app-footer>
+<app-footer *ngIf="hideNavigation"></app-footer>
